Fixing link to Efemerides Component

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <h3>
 <a name="efem%C3%A9rides-module" class="anchor" href="#efem%C3%A9rides-module"><span class="octicon octicon-link"></span></a>Efemérides (Module)</h3>
 
-<p>Efemerides is the module to fit with Efemerides Component.</p>
+<p>Efemerides is the module to fit with <a href="http://hermes-logicalbricks.github.io/com_efemerides/">Efemerides Component.</a></p>
 
 <p>Support Joomla 1.5, 1.6 and now Joomla! 2.5.</p>
 
@@ -55,6 +55,6 @@
       </div>
     </div>
 
-  
+
   </body>
 </html>
